[package]
name = "bonbon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
borsh = "0.9.3"
bs58 = "0.4.0"
mpl-token-metadata = "1.3.3"
solana-account-decoder = "1.11.10"
solana-sdk = "1.11.10"
solana-transaction-status = "1.11.10"
spl-token-2022 = "0.4.1"
spl-token = "3.3.0"
