[package]
name = "bonbon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
borsh = "0.9.3"
bs58 = "0.4.0"
mpl-token-metadata = "=1.3.3"
solana-account-decoder = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-transaction-status = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
spl-token-2022 = "0.4.1"
spl-token = "3.3.0"
