[package]
name = "bonbon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
serde-feature = ["serde", "serde_with"]

[dependencies]
borsh = "0.9.3"
bs58 = "0.4.0"
mpl-token-metadata = "=1.3.3"
serde = { version = "1", optional = true }
serde_with = { version = "1", optional = true }
solana-account-decoder = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
solana-transaction-status = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
spl-token-2022 = "0.4.1"
spl-token = "3.3.0"
