[package]
name = "chocolatier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.59"
base64 = "0.13.0"
bincode = "1.3.3"
bonbon = { path = "../bonbon" }
bytes = "1.1.0"
bs58 = "0.4.0"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["cargo"] }
fern = "0.6.1"
itertools = "0.10.3"
log = "0.4.16"
mpl-token-metadata = { git = "https://github.com/omertxyz/solana-nft-metadata.git", rev = "9f8de6a744f63f095f6cf79f8e8c5b558dca1ae1" }
postgres = "0.19.2"
postgres-types = { version = "0.2.3", features = ["derive"] }
prost = "0.10.0"
regex = "1.5.6"
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-storage-bigtable = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-storage-proto = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-transaction-status = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
spl-token = "3.3.0"
tokio = "1.20"
tokio-postgres = "0.7.5"

