[package]
name = "chocolatier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.59"
base64 = "0.13.0"
bincode = "1.3.3"
bonbon = { path = "../bonbon", features = ["serde-feature"] }
bytes = "1.1.0"
bs58 = "0.4.0"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["cargo"] }
fern = "0.6.1"
itertools = "0.10.3"
log = "0.4.16"
mpl-token-metadata = "1.3.3"
postgres = "0.19.2"
postgres-types = { version = "0.2.3", features = ["derive"] }
prost = "0.10.0"
regex = "1.5.6"
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
solana-storage-bigtable = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
solana-storage-proto = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
solana-transaction-status = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
spl-token = "3.3.0"
tokio = "1.20"
tokio-postgres = "0.7.5"

